--- a/src/common/components/Button.scss
+++ b/src/common/components/Button.scss
@@ -5,13 +5,12 @@
   color: white;
 
   border: none;
-  padding: 0;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   background: rgb(248, 0, 0);
   font-size: 18px;
-  width: 100%;
+  padding: 0 15px;
   border-radius: 12px;
   height: 48px;
 
