--- a/src/features/map/CameraMap.scss
+++ b/src/features/map/CameraMap.scss
@@ -25,5 +25,11 @@
     padding: 15px;
     background-color: #f4f4f4;
     flex-direction: row;
+    gap: 15px;
+    flex-wrap: wrap;
+  }
+
+  &__menu > * {
+    flex-grow: 1;
   }
 }
